--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 
     <div class="container">
         <a href="https://www.facebook.com/miguel.cast.dev/" target="_blank" class="face">
-            <i class="zocial-facebook"></i>
+            <i class="socicon-facebook"></i>
             <span>Facebook</span>
         </a>
         <a href="https://twitter.com/miguel__cast" target="_blank" class="tweet">
-            <i class="zocial-twitter"></i>
+            <i class="socicon-twitter"></i>
             <span>Twitter</span>
         </a>
         <a href="https://www.flickr.com/miguelcast" target="_blank" class="flickr">
-            <i class="zocial-flickr"></i>
+            <i class="socicon-flickr"></i>
             <span>Flickr</span>
         </a>
         <a href="https://github.com/miguelcast" target="_blank" class="github">
-            <i class="zocial-github"></i>
+            <i class="socicon-github"></i>
             <span>GitHub</span>
         </a>
     </div>
@@ -79,5 +79,5 @@
     </h2>
 </div>
 
-<script type="text/javascript" src="//miguelcast.github.io/lib.6aeba.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.6aeba.js"></script></body>
+<script type="text/javascript" src="//miguelcast.github.io/lib.1d8d9.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.1d8d9.js"></script></body>
 </html>
