--- a/index.html
+++ b/index.html
@@ -228,5 +228,5 @@
 
 </div>
 
-<script type="text/javascript" src="//miguelcast.github.io/lib.683df.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.683df.js"></script></body>
+<script type="text/javascript" src="//miguelcast.github.io/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.1020d.js"></script></body>
 </html>
