--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Miguel Cast</title>
-    <meta name="description" content="Miguel Cast Portfolio">
-    <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript">
-    <meta name="author" content="MiguelCast">
-    <!--<link rel="shortcut icon" href="../favicon.ico">-->
+    <title>Miguel Cast - Developer</title>
+    <meta name="description" content="Portfolio staff about technology and software development" />
+    <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
+    <meta name="author" content="MiguelCast" />
+
+    <meta property="og:title" content="Miguel Cast - Developer"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://miguelcast.co"/>
+    <meta property="og:image" content="http://miguelcast.co/img/about.png"/>
+    <meta property="og:image:width"      content="200">
+    <meta property="og:image:height"     content="300">
+    <meta property="og:site_name" content="Miguel Cast"/>
+    <meta property="og:description" content="Portfolio staff about technology and software development"/>
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <link href="//miguelcast.github.io/css/style.css" rel="stylesheet"></head>
