--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miguel Cast - Developer</title>
     <meta name="description" content="Portfolio staff about technology and software development" />
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
 
-    <meta property="og:title" content="Miguel Cast - Developer"/>
+    <link rel="canonical" href="http://miguelcast.co/" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+
+    <meta property="og:title" content="Miguel Cast"/>
+    <meta property="og:site_name" content="Miguel Cast"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://miguelcast.co"/>
     <meta property="og:image" content="http://miguelcast.co/img/about.png"/>
+    <meta property="article:publisher" content="https://www.facebook.com/miguel.cast.dev/" />
     <meta property="og:image:width"      content="200">
     <meta property="og:image:height"     content="300">
-    <meta property="og:site_name" content="Miguel Cast"/>
     <meta property="og:description" content="Portfolio staff about technology and software development"/>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Miguel Cast" />
+    <meta name="twitter:description" content="Portfolio staff about technology and software development" />
+    <meta name="twitter:url" content="http://miguelcast.co" />
+    <meta name="twitter:site" content="@miguel__cast" />
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <link href="//miguelcast.github.io/css/style.css" rel="stylesheet"></head>
