--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miguel Cast - Developer</title>
-    <meta name="description" content="Portfolio staff about technology and software development" />
+    <meta name="description" content="Portfolio staff about technology and software development, also some things about photography" />
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
 
+    <link rel="alternate" hreflang="es-es,es-co" href="http://miguelcast.co/">
     <link rel="canonical" href="http://miguelcast.co/" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -20,11 +21,11 @@
     <meta property="article:publisher" content="https://www.facebook.com/miguel.cast.dev/" />
     <meta property="og:image:width"      content="200">
     <meta property="og:image:height"     content="300">
-    <meta property="og:description" content="Portfolio staff about technology and software development"/>
+    <meta property="og:description" content="Portfolio staff about technology and software development, also some things about photography"/>
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Miguel Cast" />
-    <meta name="twitter:description" content="Portfolio staff about technology and software development" />
+    <meta name="twitter:description" content="Portfolio staff about technology and software development, also some things about photography" />
     <meta name="twitter:url" content="http://miguelcast.co" />
     <meta name="twitter:site" content="@miguel__cast" />
 
