--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miguel Cast - Developer</title>
     <meta name="description" content="Portfolio staff about technology and software development, also some things about photography" />
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
 
-    <link rel="alternate" hreflang="es-es,es-co" href="http://miguelcast.co/">
+    <link rel="alternate" hreflang="es-es,es-co" href="http://miguelcast.co/" />
     <link rel="canonical" href="http://miguelcast.co/" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
