--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
 
-    <link rel="alternate" hreflang="es-es,es-co" href="http://miguelcast.co/" />
+    <link rel="alternate" hreflang="es-es" href="http://miguelcast.co/" />
     <link rel="canonical" href="http://miguelcast.co/" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
