--- a/index.html
+++ b/index.html
@@ -247,5 +247,16 @@
 
 </div>
 
-<script type="text/javascript" src="//miguelcast.github.io/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.1020d.js"></script></body>
+<script type="text/javascript" src="//miguelcast.github.io/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.github.io/app.1020d.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-84564673-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+</body>
 </html>
