--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miguel Cast - Developer</title>
     <meta name="description" content="Portfolio staff about technology and software development, also some things about photography" />
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
+
+    <link rel="icon" href="http://miguelcast.co/favicon.ico">
 
     <link rel="alternate" hreflang="es-es" href="http://miguelcast.co/" />
     <link rel="canonical" href="http://miguelcast.co/" />
