--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css" />
     <meta name="author" content="MiguelCast" />
 
-    <link rel="icon" href="http://miguelcast.co/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#27ae60">
+    <meta name="apple-mobile-web-app-title" content="Miguel Cast - Developer">
+    <meta name="application-name" content="Miguel Cast - Developer">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="alternate" hreflang="es-es" href="http://miguelcast.co/" />
     <link rel="canonical" href="http://miguelcast.co/" />
