--- a/index.html
+++ b/index.html
@@ -265,5 +265,5 @@
     ga('send', 'pageview');
 
 </script>
-<script type="text/javascript" src="//miguelcast.co/lib.1020.js"></script><script type="text/javascript" src="//miguelcast.co/app.1020.js"></script></body>
+<script type="text/javascript" src="//miguelcast.co/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.co/app.1020d.js"></script></body>
 </html>
