--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Miguel Cast - Developer</title>
-    <meta name="description" content="Portfolio staff about technology and software development, also some things about photography">
+    <meta name="description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
     <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css">
     <meta name="author" content="MiguelCast">
 
