--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </h2>
 
     <div class="containerSocial opacityTran">
-        <a href="https://www.facebook.com/miguel.cast.dev/" target="_blank" class="face">
+        <a href="https://www.facebook.com/miguel.cast.dev/" target="_blank" rel="noopener" class="face">
             <i class="socicon-facebook"></i>
             <span>Facebook</span>
         </a>
-        <a href="https://twitter.com/miguel__cast" target="_blank" class="tweet">
+        <a href="https://twitter.com/miguel__cast" target="_blank" rel="noopener" class="tweet">
             <i class="socicon-twitter"></i>
             <span>Twitter</span>
         </a>
-        <a href="https://www.flickr.com/miguelcast" target="_blank" class="flickr">
+        <a href="https://www.flickr.com/miguelcast" target="_blank" rel="noopener" class="flickr">
             <i class="socicon-flickr"></i>
             <span>Flickr</span>
         </a>
-        <a href="https://github.com/miguelcast" target="_blank" class="github">
+        <a href="https://github.com/miguelcast" target="_blank" rel="noopener" class="github">
             <i class="socicon-github"></i>
             <span>GitHub</span>
         </a>
