--- a/index.html
+++ b/index.html
@@ -268,5 +268,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 </div>
+    <script
+			  src="https://code.jquery.com/jquery-3.1.1.min.js"
+			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			  crossorigin="anonymous"></script>
+    
 <script type="text/javascript" src="//miguelcast.co/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.co/app.1020d.js"></script></body>
 </html>
