--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <meta property="article:publisher" content="https://www.facebook.com/miguel.cast.dev/">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="300">
-    <meta property="og:description" content="Portfolio staff about technology and software development, also some things about photography">
+    <meta property="og:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Miguel Cast">
-    <meta name="twitter:description" content="Portfolio staff about technology and software development, also some things about photography">
+    <meta name="twitter:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
     <meta name="twitter:url" content="http://miguelcast.co">
     <meta name="twitter:site" content="@miguel__cast">
     
