--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="Project" onclick="window.open('http://icso.co/icso/public', '_blank');">
                 <div class="Project-Img">
-                    <img data-src="http://65.media.tumblr.com/c48fd03c3c76b93a42dd3bfe2f9e74fd/tumblr_nlfosdHuon1sfie3io1_1280.jpg" alt="ICSO" title="ICSO" class="Transition-Transform">
+                    <img data-src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/C4N3PQIRZ8.jpg" alt="ICSO" title="ICSO" class="Transition-Transform">
                     <div class="Project-Img-More Transition-All">
                         Ver mas
                         <div class="tags">
