--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 	
-<div id="home" class="seccionHome my-gradient">
+<div id="home" class="seccionHome">
     <div class="header-mobile">
         <div class="menu">
             MENU
@@ -274,7 +274,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 			  crossorigin="anonymous"></script>
 <script>!function(a){a.fn.unveil=function(b,c){function j(){var b=h.filter(function(){var b=a(this);if(!b.is(":hidden")){var c=d.scrollTop(),f=c+d.height(),g=b.offset().top,h=g+b.height();return h>=c-e&&g<=f+e}});i=b.trigger("unveil"),h=h.not(i)}var i,d=a(window),e=b||0,f=window.devicePixelRatio>1,g=f?"data-src-retina":"data-src",h=this;return this.one("unveil",function(){var a=this.getAttribute(g);a=a||this.getAttribute("data-src"),a&&(this.setAttribute("src",a),"function"==typeof c&&c.call(this))}),d.on("scroll.unveil resize.unveil lookup.unveil",j),j(),this}}(window.jQuery||window.Zepto);</script>	
-<script>function updateGradient(){if(void 0!==$){var a=colors[colorIndices[0]],b=colors[colorIndices[1]],c=colors[colorIndices[2]],d=colors[colorIndices[3]],e=1-step,f=Math.round(e*a[0]+step*b[0]),g=Math.round(e*a[1]+step*b[1]),h=Math.round(e*a[2]+step*b[2]),i="rgb("+f+","+g+","+h+")",j=Math.round(e*c[0]+step*d[0]),k=Math.round(e*c[1]+step*d[1]),l=Math.round(e*c[2]+step*d[2]),m="rgb("+j+","+k+","+l+")";$(".my-gradient").css({background:"-webkit-gradient(linear, left top, right top, from("+i+"), to("+m+"))"}).css({background:"-moz-linear-gradient(left, "+i+" 0%, "+m+" 100%)"}),step+=gradientSpeed,step>=1&&(step%=1,colorIndices[0]=colorIndices[1],colorIndices[2]=colorIndices[3],colorIndices[1]=(colorIndices[1]+Math.floor(1+Math.random()*(colors.length-1)))%colors.length,colorIndices[3]=(colorIndices[3]+Math.floor(1+Math.random()*(colors.length-1)))%colors.length)}}var colors=new Array([62,35,255],[60,255,60],[255,35,98],[45,175,230],[255,0,255],[255,128,0]),step=0,colorIndices=[0,1,2,3],gradientSpeed=.002;setInterval(updateGradient,10);</script>
 <script type="text/javascript" src="//miguelcast.co/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.co/app.1020d.js"></script></body>
 	
 
