--- a/index.html
+++ b/index.html
@@ -1,288 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Miguel Cast - Developer</title>
-    <meta name="description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
-    <meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css">
-    <meta name="author" content="MiguelCast">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#27ae60">
-    <meta name="apple-mobile-web-app-title" content="Miguel Cast - Developer">
-    <meta name="application-name" content="Miguel Cast - Developer">
-    <meta name="theme-color" content="#ffffff">
-
-    <link rel="alternate" hreflang="es-es" href="http://miguelcast.co/">
-    <link rel="canonical" href="http://miguelcast.co/">
-    <meta name="referrer" content="no-referrer-when-downgrade">
-
-    <meta property="og:title" content="Miguel Cast">
-    <meta property="og:site_name" content="Miguel Cast">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://miguelcast.co">
-    <meta property="og:image" content="http://miguelcast.co/img/about.png">
-    <meta property="article:publisher" content="https://www.facebook.com/miguel.cast.dev/">
-    <meta property="og:image:width" content="200">
-    <meta property="og:image:height" content="300">
-    <meta property="og:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
-
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Miguel Cast">
-    <meta name="twitter:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END">
-    <meta name="twitter:url" content="http://miguelcast.co">
-    <meta name="twitter:site" content="@miguel__cast">
-    
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PXR6LB');</script>
-<!-- End Google Tag Manager -->
-
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-<link href="//miguelcast.co/css/style.css" rel="stylesheet"></head>
-	
-<body>
-    
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXR6LB"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-	
-<div id="home" class="seccionHome">
-    <div class="header-mobile">
-        <div class="menu">
-            MENU
-            <div class="items-menu">
-                <div class="item">
-                    <a href="#home">INICIO</a>
-                </div>
-                <div class="item">
-                    <a href="#about">ACERCA</a>
-                </div>
-                <div class="item">
-                    <a href="#portfolio">PORTAFOLIO</a>
-                </div>
-                <div class="item">
-                    <a href="#contact">CONTACTO</a>
-                </div>
-            </div>
-        </div>
-        <div class="logo">
-            <span>&lt;M</span><span>C/&gt;</span>
-        </div>
-    </div>
-    <div class="header">
-        <div class="logoMenu">
-            <span>&lt;M</span><span>C/&gt;</span>
-        </div>
-        <div class="item">
-            <a href="#home">INICIO</a>
-        </div>
-        <div class="item">
-            <a href="#about">ACERCA</a>
-        </div>
-        <div class="item">
-            <a href="#portfolio">PORTAFOLIO</a>
-        </div>
-        <div class="item">
-            <a href="#contact">CONTACTO</a>
-        </div>
-    </div>
-
-    <div>
-        <h1 class="tittle opacityTran">
-            <span>&lt;MIGUEL</span> <span>CAST/&gt;</span>
-        </h1>
-    </div>
-
-    <div class="type opacityTran">
-        <span>DESARROLLADOR BACK-END & FRONT-END</span>
-    </div>
-</div>
-
-<div id="about" class="seccionAbout">
-    <div class="aboutContent">
-        <h2 class="tittle">
-            <span>&lt;ACERCA/&gt;</span>
-        </h2>
-        <p>
-            !Hola¡ mi nombre es <em>Miguel Castrill&oacute;n</em>, soy un profesional del desarrollo web y me encanta la fotografía.
-            Vivo en la ciudad de <em>Medell&iacute;n</em> y estoy trabajando actualmente en proyectos para Cognox S.A.S.
-        </p>
-        <p>
-            Tengo un conjunto de diversas habilidades, que van desde el diseño al HTML + CSS + Javascript (JQuery, ReactJs y NodeJs),
-            todo un recorrido con PHP(Laravel y Phalcon), desarrollo personalizado en Joomla, Wordpress y Drupal, y administración de servidores.
-        </p>
-    </div>
-    <div class="imgProfile"></div>
-</div>
-
-<div id="portfolio" class="seccionPortfolio">
-    <div class="portHeader">
-        <h2 class="tittle">
-            <span>&lt;PORTAFOLIO/&gt;</span>
-        </h2>
-    </div>
-
-    <div class="Portfolio">
-        <div class="Projects">
-            <div class="Project" onclick="window.open('http://sales.orbitel.com', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/RZWM4T2UAD.jpg" alt="Orbitel - Sales" title="Orbitel - Sales" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>PHP</span>
-                            <span>MYSQL</span>
-                            <span>Joomla</span>
-                            <span>React Js</span>
-                            <span>Phalcon</span>
-                            <span>JQuery</span>
-                            <span>API Rest</span>
-                            <span>Soap</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">Orbitel - Sales</div>
-            </div>
-            <div class="Project" onclick="window.open('http://www.orbitel.com', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/S4541GKUE4.jpg" alt="Orbitel - Store" title="Orbitel - Store" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>CSS3</span>
-                            <span>Javascript</span>
-                            <span>PHP</span>
-                            <span>MYSQL</span>
-                            <span>Joomla</span>
-                            <span>JQuery</span>
-                            <span>Soap</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">Orbitel - Store</div>
-            </div>
-            <div class="Project" onclick="window.open('http://gestioncompartida.com/admin', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://static.pexels.com/photos/288477/pexels-photo-288477.jpeg" alt="Gestion compartida" title="Gestion compartida" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>PHP</span>
-                            <span>MYSQL</span>
-                            <span>Bootstrap</span>
-                            <span>JQuery</span>
-                            <span>Wordpress</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">Gestion compartida</div>
-            </div>
-            <div class="Project" onclick="window.open('http://icso.co/icso/public', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/C4N3PQIRZ8.jpg" alt="ICSO" title="ICSO" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>Code QR</span>
-                            <span>PDF</span>
-                            <span>PHP</span>
-                            <span>MYSQL</span>
-                            <span>Bootstrap</span>
-                            <span>JQuery</span>
-                            <span>Laravel</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">ICSO</div>
-            </div>
-            <div class="Project" onclick="window.open('http://pcfk.com.co', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/WP1KHDXGOY.jpg" alt="PCFK - CARMEL - LOGUIN" title="PCFK - CARMEL - LOGUIN" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>PHP</span>
-                            <span>SQL Server</span>
-                            <span>CSS</span>
-                            <span>Javascript</span>
-                            <span>Node Js</span>
-                            <span>AWS</span>
-                            <span>Squarespace</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">PCFK - CARMEL - LOGUIN</div>
-            </div>
-            <div class="Project" onclick="window.open('http://www.reddebibliotecas.org.co/apps', '_blank');">
-                <div class="Project-Img">
-                    <img data-src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/CQI990NSLK.jpg" alt="Red bibliotecas EPM" title="Red bibliotecas EPM" class="Transition-Transform">
-                    <div class="Project-Img-More Transition-All">
-                        Ver mas
-                        <div class="tags">
-                            <span>PHP</span>
-                            <span>Mysql</span>
-                            <span>Drupal</span>
-                            <span>API Rest</span>
-                            <span>Soap</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="Project-Name">Red bibliotecas EPM</div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div id="contact" class="seccionContact">
-    <h2 class="tittle">
-        <span>&lt;CONTACTO/&gt;</span>
-    </h2>
-
-    <div class="containerSocial opacityTran">
-        <a href="https://www.facebook.com/miguel.cast.dev/" target="_blank" rel="noopener" class="face">
-            <i class="socicon-facebook"></i>
-            <span>Facebook</span>
-        </a>
-        <a href="https://twitter.com/miguel__cast" target="_blank" rel="noopener" class="tweet">
-            <i class="socicon-twitter"></i>
-            <span>Twitter</span>
-        </a>
-        <a href="https://www.flickr.com/miguelcast" target="_blank" rel="noopener" class="flickr">
-            <i class="socicon-flickr"></i>
-            <span>Flickr</span>
-        </a>
-        <a href="https://github.com/miguelcast" target="_blank" rel="noopener" class="github">
-            <i class="socicon-github"></i>
-            <span>GitHub</span>
-        </a>
-    </div>
-
-</div>
-    <script
-			  src="https://code.jquery.com/jquery-3.1.1.min.js"
-			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-			  crossorigin="anonymous"></script>
-<script>!function(a){a.fn.unveil=function(b,c){function j(){var b=h.filter(function(){var b=a(this);if(!b.is(":hidden")){var c=d.scrollTop(),f=c+d.height(),g=b.offset().top,h=g+b.height();return h>=c-e&&g<=f+e}});i=b.trigger("unveil"),h=h.not(i)}var i,d=a(window),e=b||0,f=window.devicePixelRatio>1,g=f?"data-src-retina":"data-src",h=this;return this.one("unveil",function(){var a=this.getAttribute(g);a=a||this.getAttribute("data-src"),a&&(this.setAttribute("src",a),"function"==typeof c&&c.call(this))}),d.on("scroll.unveil resize.unveil lookup.unveil",j),j(),this}}(window.jQuery||window.Zepto);</script>	
-<script type="text/javascript" src="//miguelcast.co/lib.1020d.js"></script><script type="text/javascript" src="//miguelcast.co/app.1020d.js"></script></body>
-	
-
-<script>
-	$(function() {
-		$(document).ready(function() {
-		  $("img").unveil();
-		});
-	});
-</script>	
-	
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Miguel Cast - Developer</title><meta name="description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END"><meta name="keywords" content="Miguel Cast, Developer, Portfolio, PHP, Javascript, Css"><meta name="author" content="MiguelCast"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"><link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16"><link rel="manifest" href="/manifest.json"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#27ae60"><meta name="apple-mobile-web-app-title" content="Miguel Cast - Developer"><meta name="application-name" content="Miguel Cast - Developer"><meta name="theme-color" content="#ffffff"><link rel="alternate" hreflang="es-es" href="http://miguelcast.co/"><link rel="canonical" href="http://miguelcast.co/"><meta name="referrer" content="no-referrer-when-downgrade"><meta property="og:title" content="Miguel Cast"><meta property="og:site_name" content="Miguel Cast"><meta property="og:type" content="website"><meta property="og:url" content="http://miguelcast.co"><meta property="og:image" content="http://miguelcast.co/img/about.png"><meta property="article:publisher" content="https://www.facebook.com/miguel.cast.dev/"><meta property="og:image:width" content="200"><meta property="og:image:height" content="300"><meta property="og:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Miguel Cast"><meta name="twitter:description" content="Miguel Cast Developer es un Portafolio personal acerca de mi trabajo como BACK-END & FRONT-END"><meta name="twitter:url" content="http://miguelcast.co"><meta name="twitter:site" content="@miguel__cast"><script>!function(e,t,a,n,g){e[n]=e[n]||[],e[n].push({"gtm.start":(new Date).getTime(),event:"gtm.js"});var m=t.getElementsByTagName(a)[0],r=t.createElement(a);r.async=!0,r.src="https://www.googletagmanager.com/gtm.js?id=GTM-PXR6LB",m.parentNode.insertBefore(r,m)}(window,document,"script","dataLayer")</script><link href="https://fonts.googleapis.com/css?family=Pacifico|Poiret+One" rel="stylesheet"/><link href="/static/css/main.65027555.css" rel="stylesheet"></head><body><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXR6LB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.1088cb02.js"></script></body></html>
